--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
   </div>
 
-  <footer class="page-footer indigo darken-2 wow fadeInUp">
+  <footer class="page-footer indigo darken-2 wow fadeIn">
     <div class="container">
       <div class="row">
         <div class="col l6 s12 ">
