Change accent color of button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h5 class="header col s12 light grey-text text-lighten-3 center">A simple, but powerful Material Design to-do list app</h5>
       </div>
       <div class="row center">
-        <a class="waves-effect waves-light btn">Coming to the Google Play Store soon...</a>
+        <a class="waves-effect waves-light btn pink">Coming to the Google Play Store soon...</a>
           <br></br>
           <h6 class="header col s12 light grey-text text-lighten-3 center">Compatible with Android 4.0 Jellybean and above</h6>
               </div>
