--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name = "description" content="A simple, but powerful Material Design list Android application.">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Material List</title>
+  <title>Material Tasks</title>
   <link rel="shortcut icon" href="favicon.ico">  
 
 <!-- CSS  -->
