Update page info

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="wow fadeInUp">
             <h4 class="valign z-depth-1">Simple and Elegant</h4>
             <div class="row s12"></div>
-            <p class="light">Material Tasks is a to-do list app that is designed to be simple and elegant. Designed with Google's Material Design language, you will be greeted with a familiar user-interface and immediately be able to pick up and use, such as the context-based "Floating Action Button". It is simply just intuitive.</p>
+            <p class="light">Material Tasks is a to-do list app that is designed to be simple and elegant. Designed with Google's Material Design language, you will be greeted with a familiar user-interface and immediately be able to pick up and use, such as the context-based "Floating Action Button". Also, long press on list items to bring up the context delete menu. It is simply just intuitive.</p>
             <p class="light">Tired of mismanaging multiple lists where tasks get buried and hidden? Material Tasks keeps it simple by greeting you with one, unified list. Plus all of your tasks are stored locally on your device, so there is no need to worry about privacy or usability without network access.</p>
             </div>
         </div>
@@ -117,7 +117,7 @@
             <div class="wow fadeIn">
             <h4 class="center">Simple and Elegant</h4>
             <div class="row s12"></div>
-             <p class="light justified">Material Tasks is a to-do list app that is designed to be simple and elegant. Designed with Google's Material Design language, you will be greeted with a familiar user-interface and immediately be able to pick up and use, such as the context-based "Floating Action Button". It is simply just intuitive.</p>
+             <p class="light justified">Material Tasks is a to-do list app that is designed to be simple and elegant. Designed with Google's Material Design language, you will be greeted with a familiar user-interface and immediately be able to pick up and use, such as the context-based "Floating Action Button". Also, long press on list items to bring up the context delete menu. It is simply just intuitive.</p>
             <p class="light justified">Tired of mismanaging multiple lists where tasks get buried and hidden? Material Tasks keeps it simple by greeting you with one, unified list. Plus all of your tasks are stored locally on your device, so there is no need to worry about privacy or usability without network access.</p>
             </div>
                 <br></br>    
@@ -169,7 +169,7 @@
             <div class="wow fadeInUp">
             <h4 class="valign z-depth-1">Keep tabs on your tasks</h4>
             <div class="row s12"></div>
-            <p class="light valign">You will be greeted with a clean and powerful task management screen when adding a new task. Enter the task's title, details, due date, completion status, and even take a picture to remind yourself and keep tab on the task at hand.</p>
+            <p class="light valign">You will be greeted with a clean and powerful task management screen when adding a new task. Enter the task's title, details, due date, completion status, and even take a picture to remind yourself and keep tab on the task at hand. Simply tap and type, press and capture, and long hold on the image to delete it!</p>
             </div>
         </div>
     </div>
