Add Google Play badge

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-  <nav class="indigo darken-2" role="navigation">
+  <nav class="indigo darken-2 wow fadeInDown" role="navigation">
     <div class="nav-wrapper container jumbotron"><a href="#"><img class="responsive-img center" src="icons/ic_launcher.png" alt="logo" height="60px" width="60px"></a>
         <a id="logo-container" href="#!" class="brand-logo"></a>
       <ul class="right hide-on-med-and-down">
@@ -42,7 +42,10 @@
           <h5 class="header col s12 light grey-text text-lighten-3 center">A simple, but powerful Material Design to-do list app</h5>
       </div>
       <div class="row center">
-        <a class="waves-effect waves-light btn pink">Coming to the Google Play Store soon...</a>
+        <a href="https://play.google.com/store/apps/details?id=com.bowenchin.android.materialtasks">
+  <img alt="Get it on Google Play"
+       src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+</a>
           <br></br>
           <h6 class="header col s12 light grey-text text-lighten-3 center">Compatible with Android 4.0 Jellybean and above</h6>
               </div>
