--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <br><br>
           <div class="row">
             <div class="col s12">
-                <h1 class="header white-text center z-depth-1">Material Tasks</h1>
+                <h1 class="header pink-text center z-depth-1">Material Tasks</h1>
       <div class="row center">
           <h5 class="header col s12 light grey-text text-lighten-3 center">A simple, but powerful Material Design to-do list app</h5>
       </div>
