--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
   </nav>
 
-  <div class="section no-pad-bot indigo z-depth-2 wow fadeInDown" id="index-banner">
+  <div class="section no-pad-bot indigo z-depth-2 wow fadeInDown">
       <div class="container jumbotron">
       <br><br>
           <div class="row">
