Add contact navi

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
       <ul class="right hide-on-med-and-down">
           <li><a href="#!">Home</a></li>
           <li><a href="#features">Features</a></li>
+          <li><a href="#contact">Contact</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
         <li><a href="#!"><b>Home</b></a></li>
         <li><a href="#features"><b>Features</b></a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     </div>
@@ -232,6 +234,7 @@
      <div class="divider"></div>
       <br></br>
     <!-- CONTACT FORM -->
+    <div id="contact" class="section scrollspy"></div>
       <div class="z-depth-3 section no-pad-bot grey darken-1 validate wow zoomIn" id="contact_form">
       <div class="container">
         <h3 class="Left z-depth-1 grey">Contact Me</h3>
@@ -241,7 +244,7 @@
                   <br></br>
                 <input type="text" name="_replyto" placeholder="E-mail" class="validate">
           <div class="input-field col s12">
-          <textarea name="message" placeholder="Write your message, question, or feedback here"></textarea>
+          <textarea name="message" class="validate" placeholder="Write your message, question, or feedback here"></textarea>
           </div>
                   <input type="text" name="_gotcha" style="display:none" />
           <div class="center"><input type="submit" value="Send"></div>
