--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="col s12">
                 <h1 class="header pink-text center z-depth-1">Material Tasks</h1>
       <div class="row center">
-          <h5 class="header col s12 light grey-text text-lighten-3 center">A simple, but powerful Material Design to-do list app</h5>
+          <h5 class="header col s12 light grey-text text-lighten-3 center">A simple, but beautiful Material Design to-do list app</h5>
       </div>
       <div class="row center">
         <a href="https://play.google.com/store/apps/details?id=com.bowenchin.android.materialtasks">
@@ -234,8 +234,8 @@
      <div class="divider"></div>
       <br></br>
     <!-- CONTACT FORM -->
-    <div id="contact" class="section scrollspy"></div>
       <div class="z-depth-3 section no-pad-bot grey darken-1 validate wow zoomIn" id="contact_form">
+        <div id="contact" class="section scrollspy"></div>
       <div class="container">
         <h3 class="Left z-depth-1 grey">Contact Me</h3>
           <form action="//formspree.io/chin_bo_wen@yahoo.com"
