--- a/index.html
+++ b/index.html
@@ -38,8 +38,17 @@
       <div class="container jumbotron">
       <br><br>
           <div class="row">
-            <div class="col s12">
-                <h1 class="header pink-text center z-depth-1">Material Tasks</h1>
+            <div class = "col s8 hide-on-med-and-down">
+              <img class="responsive-img" src="images/Material Tasks promo - transparent background.png" alt="app mockup">
+            </div>
+
+            <div class = "col s12 hide-on-large-only">
+              <img class="responsive-img" src="images/Material Tasks promo - transparent background.png" alt="app mockup">
+            </div>
+
+            <div class="col s3 hide-on-med-and-down">
+                <!-- <h1 class="header pink-text center z-depth-1">Material Tasks</h1> -->
+      <div id="promo-text" class="hide-on-med-and-down">
       <div class="row center">
           <h5 class="header col s12 light grey-text text-lighten-3 center">A simple, but beautiful Material Design to-do list app</h5>
       </div>
@@ -51,7 +60,22 @@
           <br></br>
           <h6 class="header col s12 light grey-text text-lighten-3 center">Compatible with Android 4.0 Jellybean and above</h6>
               </div>
+            </div>
+
           </div>
+          <div class="col s12 hide-on-large-only">
+          <div class="row center">
+              <h5 class="header col s12 light grey-text text-lighten-3 center">A simple, but beautiful Material Design to-do list app</h5>
+          </div>
+          <div class="row center">
+            <a href="https://play.google.com/store/apps/details?id=com.bowenchin.android.materialtasks">
+      <img alt="Get it on Google Play"
+           src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+    </a>
+              <br></br>
+              <h6 class="header col s12 light grey-text text-lighten-3 center">Compatible with Android 4.0 Jellybean and above</h6>
+                  </div>
+                </div>
       </div>
     </div>
   </div>
