Edit redesigned jumbotron

--- a/index.html
+++ b/index.html
@@ -38,18 +38,19 @@
       <div class="container jumbotron">
       <br><br>
           <div class="row">
-            <div class = "col s8 hide-on-med-and-down">
-              <img class="responsive-img" src="images/Material Tasks promo - transparent background.png" alt="app mockup">
+            <div class = "col s6 hide-on-med-and-down">
+              <img class="responsive-img" src="images/Material Tasks promo.png" alt="app mockup" width="750px">
             </div>
 
             <div class = "col s12 hide-on-large-only">
-              <img class="responsive-img" src="images/Material Tasks promo - transparent background.png" alt="app mockup">
+              <img class="responsive-img" src="images/Material Tasks promo.png" alt="app mockup">
             </div>
 
-            <div class="col s3 hide-on-med-and-down">
+            <div class="col s6 hide-on-med-and-down">
                 <!-- <h1 class="header pink-text center z-depth-1">Material Tasks</h1> -->
       <div id="promo-text" class="hide-on-med-and-down">
       <div class="row center">
+        <img class="responsive-img" src="images/materialtasks-logo.png" alt="app mockup" height="300px" width="300px">
           <h5 class="header col s12 light grey-text text-lighten-3 center">A simple, but beautiful Material Design to-do list app</h5>
       </div>
       <div class="row center">
@@ -65,6 +66,7 @@
           </div>
           <div class="col s12 hide-on-large-only">
           <div class="row center">
+              <img class="responsive-img" src="images/materialtasks-logo.png" alt="app mockup" height="400px" width="400px">
               <h5 class="header col s12 light grey-text text-lighten-3 center">A simple, but beautiful Material Design to-do list app</h5>
           </div>
           <div class="row center">
