Update imagery and animations

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-  <nav class="indigo darken-2 wow fadeInDown" role="navigation">
+  <nav class="indigo darken-2" role="navigation">
     <div class="nav-wrapper container jumbotron"><a href="#"><img class="responsive-img center" src="icons/ic_launcher.png" alt="logo" height="60px" width="60px"></a>
         <a id="logo-container" href="#!" class="brand-logo"></a>
       <ul class="right hide-on-med-and-down">
@@ -34,7 +34,7 @@
     </div>
   </nav>
 
-  <div class="section no-pad-bot indigo z-depth-2 wow fadeInDown">
+  <div class="section no-pad-bot indigo z-depth-2">
       <div class="container jumbotron">
       <br><br>
           <div class="row">
@@ -67,15 +67,12 @@
           <div class="col s12 hide-on-large-only">
           <div class="row center">
               <img class="responsive-img" src="images/materialtasks-logo.png" alt="app mockup" height="400px" width="400px">
-              <h5 class="header col s12 light grey-text text-lighten-3 center">A simple, but beautiful Material Design to-do list app</h5>
+              <h5 class="header col s12 light grey-text text-lighten-3 center">A simple,beautiful ad-free Material Design to-do list app</h5>
           </div>
           <div class="row center">
-            <a href="https://play.google.com/store/apps/details?id=com.bowenchin.android.materialtasks">
-      <img alt="Get it on Google Play"
-           src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
-    </a>
+            <a href="https://play.google.com/store/apps/details?id=com.bowenchin.android.materialtasks&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/generic/en-play-badge.png" /></a>
               <br></br>
-              <h6 class="header col s12 light grey-text text-lighten-3 center">Compatible with Android 4.0 Jellybean and above</h6>
+              <h6 class="header col s12 light grey-text text-lighten-3 center">Compatible with Android 4.1 Jellybean and above</h6>
                   </div>
                 </div>
       </div>
@@ -296,7 +293,7 @@
             <ul>
             <li><a href="https://twitter.com/bowenchin">Twitter</a></li>
             <li><a href="http://github.com/bow-one/MaterialListApp">GitHub</a></li>
-            <li><a class="white-text" href="#!">Play Store</a></li>
+            <li><a class="white-text" href="https://play.google.com/store/apps/details?id=com.bowenchin.android.materialtasks">Play Store</a></li>
           </ul>
         </div>
         </div>
