Update Google Play button

--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
       <div id="promo-text" class="hide-on-med-and-down">
       <div class="row center">
         <img class="responsive-img" src="images/materialtasks-logo.png" alt="app mockup" height="300px" width="300px">
-          <h5 class="header col s12 light grey-text text-lighten-3 center">A simple, but beautiful Material Design to-do list app</h5>
+          <h5 class="header col s12 light grey-text text-lighten-3 center">A simple and beautiful ad-free Material Design to-do list app</h5>
       </div>
       <div class="row center">
         <a href="https://play.google.com/store/apps/details?id=com.bowenchin.android.materialtasks">
   <img alt="Get it on Google Play"
-       src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+       src="images/google-play-badge.png" />
 </a>
           <br></br>
-          <h6 class="header col s12 light grey-text text-lighten-3 center">Compatible with Android 4.0 Jellybean and above</h6>
+          <h6 class="header col s12 light grey-text text-lighten-3 center">Compatible with Android 4.1 Jellybean and above</h6>
               </div>
             </div>
 
@@ -67,10 +67,13 @@
           <div class="col s12 hide-on-large-only">
           <div class="row center">
               <img class="responsive-img" src="images/materialtasks-logo.png" alt="app mockup" height="400px" width="400px">
-              <h5 class="header col s12 light grey-text text-lighten-3 center">A simple,beautiful ad-free Material Design to-do list app</h5>
+              <h5 class="header col s12 light grey-text text-lighten-3 center">A simple and beautiful ad-free Material Design to-do list app</h5>
           </div>
           <div class="row center">
-            <a href="https://play.google.com/store/apps/details?id=com.bowenchin.android.materialtasks&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/generic/en-play-badge.png" /></a>
+            <a href="https://play.google.com/store/apps/details?id=com.bowenchin.android.materialtasks">
+                  <img alt="Get it on Google Play"
+                       src="images/google-play-badge.png" />
+                </a>
               <br></br>
               <h6 class="header col s12 light grey-text text-lighten-3 center">Compatible with Android 4.1 Jellybean and above</h6>
                   </div>
